--- a/workshop/www/index.html
+++ b/workshop/www/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="map" style="position: absolute; width: 500px; height: 500px; z-index: -1;"></div>
+	<div id="map" style="position: absolute; width: 100%; height: 100%; z-index: -1;"></div>
 	<div id="react-application">
 			React application failed to load.
 	</div>
